--- a/podbard.yaml
+++ b/podbard.yaml
@@ -1,5 +1,5 @@
 channel:
-  link: https://junkyard.song.mu/podbard-starter/
+  link: https://yourpodcast.example.com/private-path/
   title: podbard starter
   description: podbard starter
   language: ja-JP
