--- a/podbard.yaml
+++ b/podbard.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/Songmu/podbard/refs/heads/main/schema.yaml
+
 channel:
   link: https://yourpodcast.example.com/private-path/
   title: podbard starter
