--- a/podbard.yaml
+++ b/podbard.yaml
@@ -7,6 +7,6 @@ channel:
   author: Songmu
   email: y.songmu@gmail.com
   artwork: "images/artwork.jpg" # url or path
-
+  private: true
 timezone: Asia/Tokyo
 audio_bucket_url: https://r2.dev.example.com/audio/
